Conexion DB base registro y login
Conexion a la DB de heroku, registro de usuario con hash de clave y base login

--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 {% from 'elements/navbar.html' import navbar %}
 
 {% block scripts %}
-    <script src="../static/scripts/registro.js" type="module" defer></script>
+    <script src="../static/scripts/login.js" type="module" defer></script>
 {% endblock %}
 
 {% block title %} Plasma - Iniciar sesión {% endblock %}
