--- a/templates/elements/navbar.html
+++ b/templates/elements/navbar.html
@@ -1,8 +1,10 @@
 {% macro navbar() -%} 
     <nav class="navbar navbar-light bg-light">
         <div>
-            <img src="../static/assets/icons/plasma-ball.svg" alt="d" class="w-25">
-            <h1 class="d-inline align-middle">Plasma</h1>
+            <a href="/" class="text-decoration-none text-dark">
+                <img src="../static/assets/icons/plasma-ball.svg" alt="d" class="w-25">
+                <h1 class="d-inline align-middle">Plasma</h1>
+            </a>
         </div>
         <div style="position: absolute; right: 1em;">
             <button onclick="location.href='/login'">Ingresar</button>
