Base dashboard y logout
Implementada la funcionalidad de logout desde el dashboard. Base del dashboard con menu lateral contraible en vista movil. Aregados iconos svg

--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -4,6 +4,6 @@
 {% block title %} Plasma {% endblock %}
 
 {% block body %}
-    {{ navbar() }}
+    {{ navbar("Ingresar","/login","Registrarse","/registro") }}
     <h1 class="text-center mt-3">Aqui van tarjetas</h1>
 {% endblock %}
