--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
 
 {% block body %}
     <!-- NAVBAR -->
-    {{ navbar() }}
+    {{ navbar("Ingresar","/login","Registrarse","/registro") }}
     <!-- TARJETA DE LOGIN -->
     <div class="card mx-auto mt-5">
         <div class="text-center mt-4 mb-4">
