--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -15,6 +15,8 @@ body{
 
     -webkit-animation: AnimationName 50s ease infinite;
     animation: AnimationName 50s ease infinite;
+
+    overflow: hidden;
 }
 @-webkit-keyframes AnimationName {
     0%{background-position:0% 17%}
@@ -30,6 +32,7 @@ body{
 /* BARRA DE NAVEGACION SUPERIOR */
 nav{
     background-color: #f5f5f5;
+    height: 10vh;
     /* border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px; */
 }
