--- a/templates/elements/navbar.html
+++ b/templates/elements/navbar.html
@@ -1,15 +1,15 @@
-{% macro navbar() -%} 
-    <nav class="navbar navbar-light bg-light">
+{% macro navbar(texto1, link1, texto2, link2) -%} 
+    <nav class="navbar navbar-light bg-light p-3">
         <div>
             <a href="/" class="text-decoration-none text-dark">
-                <img src="../static/assets/icons/plasma-ball.svg" alt="d" class="w-25">
+                <img src="../static/assets/icons/plasma.svg" alt="p">
                 <h1 class="d-inline align-middle">Plasma</h1>
             </a>
         </div>
         <div style="position: absolute; right: 1em;">
-            <button onclick="location.href='/login'">Ingresar</button>
+            <button onclick="location.href='{{link1}}'">{{texto1}}</button>
             &nbsp;
-            <button onclick="location.href='/registro'">Registrarse</button>
+            <button onclick="location.href='{{link2}}'">{{texto2}}</button>
         </div>
     </nav>
 {% endmacro -%}
