--- a/templates/registro.html
+++ b/templates/registro.html
@@ -9,7 +9,7 @@
 
 {% block body %} 
     <!-- NAVBAR -->
-    {{ navbar() }}
+    {{ navbar("Ingresar","/login","Registrarse","/registro") }}
     <!-- TARJETA DE REGISTRO -->
     <div class="card mx-auto mt-5">
         <div class="text-center mt-4 mb-4">
