--- a/templates/elements/navbar.html
+++ b/templates/elements/navbar.html
@@ -2,12 +2,12 @@
     <nav class="navbar navbar-light bg-light p-3">
         <div>
             <a href="/" class="text-decoration-none text-dark">
-                <img src="../static/assets/icons/plasma.svg" alt="p">
+                <img src="../static/assets/icons/plasma.svg" alt="p" style="width: 2em;">
                 <h1 class="d-inline align-middle">Plasma</h1>
             </a>
         </div>
         <div style="position: absolute; right: 1em;">
-            <button onclick="location.href='{{link1}}'">{{texto1}}</button>
+            <button onclick="location.href='{{link1}}'" class="boton-acento">{{texto1}}</button>
             &nbsp;
             <button onclick="location.href='{{link2}}'">{{texto2}}</button>
         </div>
