--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
     <script src="../static/scripts/bootstrap/bootstrap.min.js" defer></script>
     <!-- CSS'S -->
     <link rel="stylesheet" href="../static/styles/style.css">
+    {% block styles %} {% endblock %}
     <!-- JS'S -->
     {% block scripts %} {% endblock %}
     <title> {% block title %} {% endblock %} </title>
