--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -24,7 +24,7 @@
         </div>
         <div style="position: absolute; right: 1em;">
             <!-- <button onclick="location.href='/perfil'">Editar perfil</button> -->
-            <a><img src="../static/imagenes/perfil/kitten.jpg" onerror="this.src='../static/assets/icons/usuario.svg'" class="rounded-circle icono-perfil"></a>
+            <a><img src="../static/assets/icons/usuario.svg" onerror="this.src='../static/assets/icons/usuario.svg'" id="imagen-icono-perfil" class="rounded-circle icono-perfil"></a>
         </div>
     </nav>
     <div class="container-fluid" style="height: 90vh;">
