Modificacion imagen perfil
Modificacion de la imagen del perfil de un usuario, incluida la previsualizacion de esta en el modal editar perfil. Mejorado el CSS

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -34,7 +34,7 @@ img{
 
 /* BARRA DE NAVEGACION SUPERIOR */
 nav{
-    background-color: #f5f5f5;
+    background-color: #eeeeee;
     height: 10vh;
     /* border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px; */
