--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -15,7 +15,7 @@
 
 {% block body %} 
     <!-- NAVBAR -->
-    <nav class="navbar navbar-light bg-light p-3">
+    <nav class="navbar navbar-light p-3">
         <div>
             <a href="/dashboard" class="text-decoration-none text-dark">
                 <img src="../static/assets/icons/plasma.svg" alt="p" style="width: 2em;">
@@ -29,7 +29,7 @@
     </nav>
     <div class="container-fluid" style="height: 90vh;">
         <div class="row flex-nowrap" style="height: 90vh;">
-            <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-light">
+            <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 barra-lateral">
                 <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
                     <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
                         <li class="nav-item mt-2 mb-2">
