--- a/static/styles/dashboard.css
+++ b/static/styles/dashboard.css
@@ -1,3 +1,12 @@
+body{
+    overflow: hidden;
+    background: #fafafa;
+}
+
+.barra-lateral{
+    background-color: #e0e0e0;
+}
+
 /* ICONO DEL PERFIL DEL USUARIO EN LA NAVBAR */
 .icono-perfil{
     width: 50px;
