--- a/templates/elements/modal.html
+++ b/templates/elements/modal.html
@@ -7,7 +7,7 @@
                 </div>
                 <div class="modal-body text-center">
                     <h3>Editar perfil</h3>
-                    <div id="contenedor-imagen-editar-perfil"></div>
+                    <img id="previsualizacion-imagen-editar-perfil" src="../static/assets/icons/usuario.svg" onerror="this.src='../static/assets/icons/usuario.svg'" style="width: 90px;" class="rounded-circle m-2">
                     <form id="form-editar-perfil">
                         <div>
                             <label for="usuario">Nombre de usuario</label>
@@ -28,6 +28,11 @@
                             <label for="confirmar-clave">Confirmar clave</label>
                             <br/>
                             <input type="password" name="confirmar-clave"/>
+                        </div>
+                        <div>
+                            <label for="confirmar-clave">Nueva imagen de perfil</label>
+                            <br/>
+                            <input type="file" accept="image/*" name="imagen" id="input-nueva-imagen-perfil" class="input-formulario"/>
                         </div>
                     </form>
                 </div>
