Creacion de repositorios
Incluido el archivo "repositorios.js" para manejar la creacion de los repositorios. Agregado en el template que maneja los macros de los modal, el modal para creacion de repositorios. Incrementado en la tabla de repositorios, los caracteres de la descripcion a 100 y el nombre del repositorio limitado a 25.

--- a/static/styles/dashboard.css
+++ b/static/styles/dashboard.css
@@ -24,6 +24,11 @@ body{
     width: 15%;
 }
 
+/* PREVISUALIZACION DE LA IMAGEN DEL REPOSITORIO EN EL MODAL DE CREACION */
+#previsualizacion-imagen-crear-repositorio{
+    border-radius: 15px;
+}
+
 .card{
     width: 100%;
     margin-bottom: 1em;
