--- a/templates/elements/modal.html
+++ b/templates/elements/modal.html
@@ -30,7 +30,7 @@
                             <input type="password" name="confirmar-clave"/>
                         </div>
                         <div>
-                            <label for="confirmar-clave">Nueva imagen de perfil</label>
+                            <label for="imagen">Nueva imagen de perfil</label>
                             <br/>
                             <input type="file" accept="image/*" name="imagen" id="input-nueva-imagen-perfil" class="input-formulario"/>
                         </div>
@@ -38,6 +38,40 @@
                 </div>
                 <button id="boton-guardar-edicion-perfil" class="mt-3 w-auto mx-auto boton-acento">Guardar cambios</button>
                 <button id="boton-eliminar-perfil" class="boton-eliminar mt-3 mb-4 w-auto mx-auto boton-alerta">Eliminar perfil</button>
+            </div>
+        </div>
+    </div>
+{%- endmacro %}
+
+{% macro modal_crear_repositorio() -%}
+    <div class="modal fade" id="modal-crear-repositorio"> 
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button class="boton-volver" data-bs-dismiss="modal">Cerrar</button>
+                </div>
+                <div class="modal-body text-center">
+                    <h3>Nuevo repositorio</h3>
+                    <img id="previsualizacion-imagen-crear-repositorio" src="../static/assets/icons/repositorio.svg" onerror="this.src='../static/assets/icons/repositorio.svg'" style="width: 90px;" class="m-2">
+                    <form id="form-crear-repositorio">
+                        <div>
+                            <label for="nombre">Nombre del repositorio</label>
+                            <br>
+                            <input type="text" name="nombre" autocomplete="off">
+                        </div>
+                        <div>
+                            <label for="descripcion">Descripción (opcional)</label>
+                            <br>
+                            <input type="text" name="descripcion" autocomplete="off">
+                        </div>
+                        <div>
+                            <label for="imagen">Imagen del repositorio (opcional)</label>
+                            <br>
+                            <input type="file" accept="image/*" name="imagen" id="input-imagen-crear-repositorio" class="input-formulario"/>
+                        </div>
+                    </form>
+                </div>
+                <button id="boton-guardar-repositorio" class="mt-3 mb-4 w-auto mx-auto boton-acento">Crear repositorio</button>
             </div>
         </div>
     </div>
