--- a/templates/elements/modal.html
+++ b/templates/elements/modal.html
@@ -111,3 +111,46 @@
         </div>
     </div>
 {%- endmacro %}
+
+{% macro modal_crear_imagen() -%}
+    <div class="modal fade" id="modal-crear-imagen"> 
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button class="boton-volver" data-bs-dismiss="modal">Cerrar</button>
+                </div>
+                <div class="modal-body text-center">
+                    <h3>Nueva imagen</h3>
+                    <img id="previsualizacion-imagen-crear-imagen" src="../static/assets/icons/imagen.svg" onerror="this.src='../static/assets/icons/imagen.svg'" style="width: 90px;" class="m-2">
+                    <form id="form-crear-imagen">
+                        <div>
+                            <label for="imagen">Imagen</label>
+                            <br>
+                            <input type="file" accept="image/*" name="imagen" id="input-imagen-crear-imagen" class="input-formulario"/>
+                        </div>
+                        <div>
+                            <label for="descripcion">Descripción (opcional)</label>
+                            <br>
+                            <input type="text" name="descripcion" id="input-descripcion-crear-imagen" autocomplete="off">
+                        </div>
+                        <div>
+                            <label for="repositorio">Repositorio</label>
+                            <br>
+                            <select name="repositorio" id="select-repositorio-crear-imagen">
+                                <option value="">Seleccione un repositorio</option>
+                            </select>
+                        </div>
+                        <div>
+                            <label>Tags de la imagen</label>
+                            <br>
+                            <div id="contenedor-tags-crear-imagen" class="contenedor-tags">
+                                <input type="text" id="input-tags-crear-imagen" autocomplete="off" placeholder="Nuevo tag">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <button id="boton-guardar-imagen" class="mt-3 mb-4 w-auto mx-auto boton-acento">Cargar imagen</button>
+            </div>
+        </div>
+    </div>
+{%- endmacro %}
