--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -71,8 +71,8 @@
                 </div>
             </div>
             <div id="div-contenido-principal" class="col py-3">
+                <h4 class="text-center mt-2 mb-4">Las más recientes publicaciones</h4>
                 {% block contenido %}
-                    <h4>contenido en la vista del dashboard</h4>
                 {% endblock %}
             </div>
         </div>
