Datos repositorio y arreglos
Obtencion de todos los datos de un repositorio dado su id con el endpoint /repositorio/id. Visualizacion del repositorio de un usuario (imagenes del repo e info) en su nuevo modal. Creacion de imagenes con fecha segun la del browser del cliente. Obtencion de las imagenes del inicio de forma descendente de id (mas arriba las de id mas alto, es decir, las ultimas que se cargaron). Arreglados aspectos visuales en la vista de inicio.

--- a/static/styles/dashboard.css
+++ b/static/styles/dashboard.css
@@ -112,6 +112,26 @@ body{
     padding: 0.5em;
 }
 
+/* ESTILO DE LAS TARJETAS DE LAS IMAGENES EN LA VISTA DE REPOSITORIO */
+.tarjeta-imagen{
+    text-align: left;
+}
+
+.tarjeta-imagen img{
+    width: 100%;
+    margin: 0px;
+    border-radius: 0px;
+}
+
+.tarjeta-imagen .card-body{
+    padding: 0px;
+    padding-top: 1em;
+}
+
+.tarjeta-imagen p{
+    margin: 1em;
+}
+
 /* ESTILOS REFERENTES A LOS TAGS */
 .contenedor-tags{
     display: flex;
