--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,7 +2,7 @@
 {% from 'elements/navbar.html' import navbar %}
 {% from 'elements/modal.html' import modal_editar_perfil %}
 {% from 'elements/modal.html' import modal_crear_repositorio %}
-{% from 'elements/modal.html' import modal_editar_repositorio, modal_crear_imagen %}
+{% from 'elements/modal.html' import modal_visualizar_repositorio, modal_editar_repositorio, modal_crear_imagen %}
 
 {% block styles %}
     <link rel="stylesheet" href="../static/styles/dashboard.css">
@@ -71,8 +71,8 @@
                 </div>
             </div>
             <div id="div-contenido-principal" class="col py-3">
-                <h4 class="text-center mt-2 mb-4">Las más recientes publicaciones</h4>
                 {% block contenido %}
+                    <h4 class="text-center mt-2 mb-4">Las más recientes publicaciones</h4>
                 {% endblock %}
             </div>
         </div>
@@ -81,6 +81,8 @@
     {{ modal_editar_perfil() }}
     <!-- MODAL CREAR REPOSITORIO -->
     {{ modal_crear_repositorio() }}
+    <!-- MODAL VISUALIZAR REPOSITORIO -->
+    {{ modal_visualizar_repositorio() }}
     <!-- MODAL EDITAR REPOSITORIO -->
     {{ modal_editar_repositorio() }}
     <!-- MODAL CREAR IMAGEN -->
